--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "com.grimbar-interactive.unity-variables",
   "displayName": "Unity Variables",
   "version": "1.0.0",
-  "unity": "2020.3.25f1",
+  "unity": "2020.3",
   "description": "Scriptable object variables.",
   "keywords": [ "variable","variables", "game", "games", "unity" ],
   "category": "unity",
