--- a/Runtime/GrimbarInteractive.UnityToolkit.Variables.asmdef
+++ b/Runtime/GrimbarInteractive.UnityToolkit.Variables.asmdef
@@ -2,7 +2,7 @@
     "name": "GrimbarInteractive.UnityToolkit.Variables",
     "rootNamespace": "",
     "references": [
-        "GUID:776d03a35f1b52c4a9aed9f56d7b4229"
+        "GUID:6f06de8afc272b14699bec2824553081"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
@@ -10,7 +10,9 @@
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
-    "defineConstraints": [],
+    "defineConstraints": [
+        "GI_ATTRIBUTES"
+    ],
     "versionDefines": [],
     "noEngineReferences": false
 }
