--- a/Editor/GrimbarInteractive.UnityToolkit.Variables.Editor.asmdef
+++ b/Editor/GrimbarInteractive.UnityToolkit.Variables.Editor.asmdef
@@ -12,9 +12,7 @@
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
-    "defineConstraints": [
-        "GI_ATTRIBUTES"
-    ],
+    "defineConstraints": [],
     "versionDefines": [],
     "noEngineReferences": false
 }
