--- a/Runtime/GrimbarInteractive.UnityToolkit.Variables.asmdef
+++ b/Runtime/GrimbarInteractive.UnityToolkit.Variables.asmdef
@@ -10,9 +10,7 @@
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
-    "defineConstraints": [
-        "GI_ATTRIBUTES"
-    ],
+    "defineConstraints": [],
     "versionDefines": [],
     "noEngineReferences": false
 }
